--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+asa
 
 # Translations
 *.mo
@@ -154,3 +155,4 @@ cython_debug/
 # Venv
 .venv/
 venv/
+
